# wclipd

./: Cargo.toml  Makefile  README.md  default-config.yaml
.github/: build-linux.sh  install-linux.sh
.github/workflows/: rust.yml
src/: client.rs  clipboard.rs  config.rs  daemon.rs  main.rs  message.rs  mime.rs  table.rs
src/backend/: backend.rs  config.rs  disk.rs  manager.rs  memory.rs  mod.rs  store_kv.rs  store_memory.rs
src/backend2/: backend.rs  config.rs  manager.rs  mod.rs  store_kv.rs  store_memory.rs
