[package]
name = "wclipd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
clap = { version = "4.5.4", features = ["derive"] }
daemonize = "0.5.0"
edit = "0.1.5"
env_logger = "0.11.3"
humantime = "2.1.0"
kv = { version = "0.24.0", features = ["serde_json", "json-value"] }
lastlog = { version = "0.3.0", features = ["libc"], git = "https://github.com/imgurbot12/lastlog" }
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_yaml = "0.9.34"
shellexpand = "3.1.0"
thiserror = "1.0.58"
wayland-clipboard-listener = "0.2.5"
wl-clipboard-rs = "0.8.1"
xdg = "2.5.2"
xdg-mime = "0.3.3"
